assets/css/style.css
html {
    background-color: #F9FBFD;;
}
main {
    justify-content: center;
    align-items: center;
    background-color: #F9FBFD;
}

hr {
    border: 1px solid black;
    width: 100%;
}

.app-container {
    background-color: white;
    border: 3px solid black;
    padding: 2rem;
    align-items: flex-start;
    flex: 1;
    max-width: 75%;
    margin: auto;
    justify-content: center;
}

.main-container {
    background-color: #F9FBFD;

}
.password-area {
    padding: 16px;
    border: 2px dashed black;
    border-radius: 5px;
    max-width: 100%;
    max-height: 100%;
    margin: 24px auto;
    overflow-wrap: break-word;
}

#password-text {
    
    font-size: 1.5rem;
}

#generate {
    border: 0;
    background-color: #AF0808;
    color: white;
    padding: 12px 24px;
    font-size: 1.5rem;
    align-self: center;
    border-radius: 24px;
}


@media only screen and (min-width: 768px) {
    .password-area {
        width: 95%;
        height: 100%;
    }
}

